--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "byCRXHIT",
   "license": "MIT",
   "dependencies": {
-    "aoi.js": "^4.4.4"
+    "aoi.js": "^4.4.4",
+    "discord-giveaways": "^5.1.0"
   }
 }
