--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "skurrol_discord_bot",
+  "name": "exampleDiscordBot",
   "version": "1.0.0",
-  "description": "A Multi Purpose Discord Bot",
+  "description": "Description about the Bot",
   "main": "skurrol.js",
   "scripts": {
     "start": "node skurrol.js"
@@ -9,7 +9,7 @@
   "engines": {
     "node": "12.x"
   },
-  "author": "VerxcyDev",
+  "author": "YourUserName",
   "license": "MIT",
   "dependencies": {
     "aoi.js": "^4.4.4",
