--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exampleDiscordBot",
+  "name": "example-discord-bot",
   "version": "1.0.0",
   "description": "Description about the Bot",
   "main": "skurrol.js",
