--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "skurrol",
   "version": "1.0.0",
-  "description": "Skurrol is a multipurpose discord bot!",
-  "main": "skurrol.js",
+  "description": "VerxcyDEV.DNS is a private Dns Service for our office",
+  "main": "index.js",
   "scripts": {
-    "start": "node skurrol.js"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
     "node": "12.x"
   },
-  "author": "YourUserName",
+  "author": "Verxcy-Group",
   "license": "MIT",
   "dependencies": {
-    "aoi.js": "^4.6.0",
-    "discord-giveaways": "^5.1.0"
+    "express": "^4.18.0"
   }
 }
